force-app/main/default/objects/Account/fields/VA_IDCode__c.field-meta.xml
<CustomField>
    <fullName>VA_IDCode__c</fullName>
    <inlineHelpText>협력사의 고유번호입니다.</inlineHelpText>
    <label>협력회사코드</label>
    <length>20</length>
    <type>Text</type>
</CustomField>