force-app/main/default/objects/Account/fields/VD_IndustryLv1__c.field-meta.xml
<CustomField>
    <fullName>VD_IndustryLv1__c</fullName>
    <inlineHelpText>업종 1단계 분류입니다.</inlineHelpText>
    <label>업종</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>금속가공</fullName>
            </value>
            <value>
                <fullName>금형</fullName>
            </value>
            <value>
                <fullName>기구일반</fullName>
            </value>
            <value>
                <fullName>사출</fullName>
            </value>
            <value>
                <fullName>원부자재</fullName>
            </value>
            <value>
                <fullName>인쇄포장</fullName>
            </value>
            <value>
                <fullName>전기</fullName>
            </value>
            <value>
                <fullName>전자</fullName>
            </value>
            <value>
                <fullName>프레스</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>