force-app/main/default/objects/Account/fields/VD_NejaYJa__c.field-meta.xml
<CustomField>
    <fullName>VD_NejaYJa__c</fullName>
    <inlineHelpText>내자 ./ 외자 여부를 입력합니다. 내자 외주 구분 기준은 업무편람을 참조하세요.</inlineHelpText>
    <label>내자/외자</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>내자</fullName>
            </value>
            <value>
                <fullName>외자</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>