force-app/main/default/objects/Account/fields/VD_PrevYearIndustry__c.field-meta.xml
<CustomField>
    <fullName>VD_PrevYearIndustry__c</fullName>
    <label>전년도 세부업종 명</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>일반금속가공</fullName>
            </value>
            <value>
                <fullName>중소형프레스</fullName>
            </value>
            <value>
                <fullName>대형사출</fullName>
            </value>
            <value>
                <fullName>금형</fullName>
            </value>
            <value>
                <fullName>전자ASS`Y</fullName>
            </value>
            <value>
                <fullName>기구기타</fullName>
            </value>
            <value>
                <fullName>중소형사출</fullName>
            </value>
            <value>
                <fullName>전기일반</fullName>
            </value>
            <value>
                <fullName>조립부자재</fullName>
            </value>
            <value>
                <fullName>조립부자재(실적)</fullName>
            </value>
            <value>
                <fullName>인쇄물</fullName>
            </value>
            <value>
                <fullName>포장물</fullName>
            </value>
            <value>
                <fullName>전기일반(실적)</fullName>
            </value>
            <value>
                <fullName>전자일반(실적)</fullName>
            </value>
            <value>
                <fullName>전기ASS`Y</fullName>
            </value>
            <value>
                <fullName>전자일반</fullName>
            </value>
            <value>
                <fullName>전자반도체</fullName>
            </value>
            <value>
                <fullName>기구ASS`Y</fullName>
            </value>
            <value>
                <fullName>전기커넥터</fullName>
            </value>
            <value>
                <fullName>전자반도체(실적)</fullName>
            </value>
            <value>
                <fullName>전기ASS`Y(실적)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>