force-app/main/default/objects/Account/fields/VD_StrategicSite__c.field-meta.xml
<CustomField>
    <fullName>VD_StrategicSite__c</fullName>
    <inlineHelpText>전략협력회사 여부입니다. 전략협력회사 여부는 회사의 연말 전략에 의해 갱신됩니다.</inlineHelpText>
    <label>전략협력회사</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>일반</fullName>
            </value>
            <value>
                <fullName>전략</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>