force-app/main/default/objects/Account/fields/VD_TxnEndDate__c.field-meta.xml
<CustomField>
    <fullName>VD_TxnEndDate__c</fullName>
    <inlineHelpText>거래 중단일입니다.</inlineHelpText>
    <label>거래중단일</label>
    <type>Date</type>
</CustomField>