force-app/main/default/objects/Account/fields/VD_TxnSoonEndDate__c.field-meta.xml
<CustomField>
    <fullName>VD_TxnSoonEndDate__c</fullName>
    <inlineHelpText>거래중단예정일입니다. 예정일 -7일에 필요한 과업이 자동으로 생성됩니다.</inlineHelpText>
    <label>거래중단예정일</label>
    <type>Date</type>
</CustomField>