force-app/main/default/objects/Account/fields/VD_TxnStartDate__c.field-meta.xml
<CustomField>
    <fullName>VD_TxnStartDate__c</fullName>
    <inlineHelpText>거래개시일입니다. 거래 개시일은 첫번째 공급계약이 이루어지는 시점에 자동으로 업데이트 됩니다.</inlineHelpText>
    <label>거래개시일</label>
    <type>Date</type>
</CustomField>