force-app/main/default/objects/Account/fields/VD_VendorSize__c.field-meta.xml
<CustomField>
    <fullName>VD_VendorSize__c</fullName>
    <inlineHelpText>협력회사의 회사 분류입니다. 회사 분류는 서울신용평가 정보 기준으로 산정됩니다.</inlineHelpText>
    <label>기업규모</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>중소기업</fullName>
            </value>
            <value>
                <fullName>중견기업</fullName>
            </value>
            <value>
                <fullName>대기업</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>