force-app/main/default/objects/Account/recordTypes/Vendor.recordType-meta.xml
<RecordType>
    <fullName>Vendor</fullName>
    <active>true</active>
    <description>협력사 유형의 조직을 담는데 사용하는 타입입니다.</description>
    <label>협력사</label>
</RecordType>