force-app/main/default/objects/Account/listViews/VendorList_Enterprise.listView-meta.xml
<ListView>
    <fullName>VendorList_Enterprise</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Vendor</value>
    </filters>
    <filters>
        <field>VD_VendorSize__c</field>
        <operation>equals</operation>
        <value>대기업</value>
    </filters>
    <label>협력사 리스트-대기업</label>
</ListView>